--- a/index.html
+++ b/index.html
@@ -40,17 +40,20 @@
         <h1>Ihab Ali</h1>
         <h1>Full Stack Web Developer</h1>
         <p class="header-p">Current Lambda School Student</p>
+        <hr>
       </div>
-
+    
     </header><!-- end header -->
 
 
     <section class="main">
-      <div class="intro" id="intro">
-        <h1>Intro</h1><br><br>
-        <p>I am a Full Stack Web Developer living in Dallas, TX.<br /><br />
-          Self-motivated, proactive and highly analytical thinking, offers a vast knowledge of IT, Web Development, QA Software Testing and Information Security. <br />
-          Earned Bachelor of Science in Management Information Systems and pursuing Master of Science in I.T. Management, and also study Full Stack Web Development at Lambda School.</p>
+      <div class="summary" id="summary">
+        <h1>Summary</h1><br><br>
+        <p>Hi! I am Ihab, an enthusiastic and passionate I am a Full Stack Web Developer who enjoys developing innovative solutions to online problems, and to design and implement beautiful, accessible, websites with more focus on the frontend because I really appreciate a good design with great performance and I am seeing it's importance more than ever in today's apps, websites, and products.
+          <br /><br />
+                    I am also self-motivated, proactive and highly analytical thinking, offers a vast knowledge of I.T., Web Development, QA Software Testing and Information Security. <br />
+                    Earned Bachelor of Science in Management Information Systems and pursuing Master of Science in I.T. Management, and also currently studying Full Stack Web Development at Lambda School.
+                </p>
       </div><!-- end intro -->
 
       <div class="skills" id="skills">
@@ -93,6 +96,7 @@
       </div>
     </section><!-- end work -->
 
+    <hr>
 
     <section class="contact" id="contact">
       <h1>Contact Me</h1><br><br>
